# FounderOsAi

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/app/ai/: models.py  routes.py  schemas.py  services.py
backend/app/api/: router.py
backend/app/auth/: dependencies.py  models.py  routes.py  schemas.py  security.py  services.py
backend/app/checkins/: models.py  routes.py  schemas.py  services.py
backend/app/core/: app.py  health.py  logging.py  middleware.py  observability.py  rate_limit.py  settings.py
backend/app/database/: mixins.py  models.py  redis.py  session.py
backend/app/notifications/: models.py  routes.py  schemas.py  services.py
backend/app/outreach/: models.py  routes.py  schemas.py  services.py
backend/app/tasks/: models.py  routes.py  schemas.py  services.py
backend/app/users/: models.py
backend/app/workspaces/: models.py  routes.py  schemas.py  services.py
backend/deploy/: .env.production.example  docker-compose.prod.yml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_contract_stabilization.py  0003_auth_hardening.py
backend/tests/: test_ai.py  test_auth_hardening.py  test_auth_routes.py  test_checkins.py  test_health.py  test_notifications.py  test_outreach.py  test_tasks.py  test_workspaces.py
docs/: founderos-ai-product-engineering-spec.md  frontend-founderos-ai-product-engineering-spec.md
frontend/: .dockerignore  .env.frontend.example  .env.local.example  .env.production.example  (+12 more)
(+113 files in other folders)
